[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/Player/Body/body1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Body/body3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Body/body2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Body/body4.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Scripts/customizer.gd" type="Script" id=5]
[ext_resource path="res://Assets/Player/Body/body5.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI/Buttons/button_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/Player/Eyes/eyes4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Eyes/eyes3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Eyes/eyes2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Eyes/eyes1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/default_outfit.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Hair/hair7.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Hair/hair1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/Hair/hair8.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/Hair/hair2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/Hair/hair6.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player/Hair/hair3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/Hair/hair4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/Hair/hair5.png" type="Texture" id=20]
[ext_resource path="res://Assets/GUI/Buttons/save_button.tres" type="StyleBox" id=21]
[ext_resource path="res://Assets/Retro Gaming.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://Assets/GUI/Buttons/button.tres" type="StyleBox" id=23]
[ext_resource path="res://Assets/GUI/UI_Flat_Banner_02_Downward.png" type="Texture" id=24]
[ext_resource path="res://Assets/Player/Eyes/eyes5.png" type="Texture" id=25]
[ext_resource path="res://Assets/Scenes/deck.png" type="Texture" id=26]

[sub_resource type="Gradient" id=9]

[sub_resource type="GradientTexture2D" id=10]
gradient = SubResource( 9 )
fill_to = Vector2( 0, 1 )

[sub_resource type="TileSet" id=4]
1/name = "hair2.png 1"
1/texture = ExtResource( 16 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 384, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "hair3.png 2"
2/texture = ExtResource( 18 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 448, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "hair4.png 3"
3/texture = ExtResource( 19 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 448, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "hair5.png 4"
4/texture = ExtResource( 20 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 448, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "hair6.png 5"
5/texture = ExtResource( 17 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 448, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "hair7.png 6"
6/texture = ExtResource( 13 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 448, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "hair8.png 7"
7/texture = ExtResource( 15 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 448, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "hair1.png 8"
8/texture = ExtResource( 14 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 448, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "default_outfit.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 448, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=1]
0/name = "body1.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 448, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "body2.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 448, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "body3.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 448, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "body4.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 448, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "body5.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 448, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="TileSet" id=12]
0/name = "eyes1.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 384, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "eyes2.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 384, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "eyes3.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 384, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "eyes4.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "eyes5.png 4"
4/texture = ExtResource( 25 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 384, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=6]
size = 27
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 22 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 24 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 1, 1, 0.576471 )

[node name="Customizer" type="Node2D"]
script = ExtResource( 5 )

[node name="bg" type="TextureRect" parent="."]
self_modulate = Color( 0.360784, 0.360784, 0.360784, 1 )
margin_left = -320.0
margin_top = -178.0
margin_right = 380.0
margin_bottom = 222.0
texture = SubResource( 10 )
expand = true

[node name="fg" type="TextureRect" parent="."]
margin_left = -335.0
margin_top = -152.0
margin_right = -15.0
margin_bottom = 28.0
rect_scale = Vector2( 2.08267, 1.85004 )
texture = ExtResource( 26 )

[node name="text" type="Label" parent="."]
margin_left = -305.0
margin_top = -152.0
margin_right = 6.0
margin_bottom = -80.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.658824, 0.537255, 0.172549, 1 )
custom_constants/line_spacing = 7
text = "Your name is Clover. You're aboard the
Tropic Cruise. Will you make any friends?
            Will you create new adventures?"
align = 3
valign = 3

[node name="player" type="Node2D" parent="."]

[node name="hair" type="TileMap" parent="player"]
position = Vector2( -300, -293.058 )
scale = Vector2( 3, 3 )
z_index = 3
tile_set = SubResource( 4 )
format = 1

[node name="outfits" type="TileMap" parent="player"]
position = Vector2( -300, -100 )
scale = Vector2( 3, 3 )
z_index = 2
tile_set = SubResource( 3 )
format = 1

[node name="bodies" type="TileMap" parent="player"]
position = Vector2( -300, -100 )
scale = Vector2( 3, 3 )
tile_set = SubResource( 1 )
format = 1

[node name="eyes" type="TileMap" parent="player"]
position = Vector2( -300, -295 )
scale = Vector2( 3, 3 )
tile_set = SubResource( 12 )
format = 1

[node name="buttons" type="Node2D" parent="."]
z_index = 5

[node name="body_button" type="Button" parent="buttons"]
margin_left = 69.0
margin_top = -152.0
margin_right = 269.0
margin_bottom = -102.0
rect_min_size = Vector2( 200, 50 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 23 )
custom_styles/normal = ExtResource( 23 )
text = "Change Body"

[node name="hair_button" type="Button" parent="buttons"]
margin_left = 69.0
margin_top = -7.0
margin_right = 269.0
margin_bottom = 43.0
rect_min_size = Vector2( 200, 50 )
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 23 )
custom_styles/normal = ExtResource( 23 )
text = "Change Hair"

[node name="eyes_button" type="Button" parent="buttons"]
margin_left = 69.0
margin_top = -78.0
margin_right = 269.0
margin_bottom = -28.0
rect_min_size = Vector2( 200, 50 )
focus_mode = 0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 23 )
custom_styles/normal = ExtResource( 23 )
text = "Change Eyes"

[node name="save_button" type="Button" parent="buttons"]
margin_left = 66.0
margin_top = 84.0
margin_right = 266.0
margin_bottom = 134.0
rect_min_size = Vector2( 200, 50 )
focus_mode = 0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = ExtResource( 21 )
custom_styles/normal = ExtResource( 21 )
text = "Save"

[node name="back_button" type="Button" parent="buttons"]
margin_left = -320.0
margin_top = 134.0
margin_right = -120.0
margin_bottom = 184.0
rect_min_size = Vector2( 200, 50 )
focus_mode = 0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = ExtResource( 21 )
custom_styles/normal = ExtResource( 21 )
text = "< Back"

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="pressed" from="buttons/body_button" to="." method="_on_body_button_pressed"]
[connection signal="pressed" from="buttons/hair_button" to="." method="_on_hair_button_pressed"]
[connection signal="pressed" from="buttons/eyes_button" to="." method="_on_eyes_button_pressed"]
[connection signal="pressed" from="buttons/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="buttons/back_button" to="." method="_on_back_button_pressed"]
